bizarre alignment issue; render pdf

--- a/sass/partials/_document.scss
+++ b/sass/partials/_document.scss
@@ -116,7 +116,7 @@ section {
         ul:not(.icons) {
           li {
             margin-left: 3px;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
             line-height: 110%;
           }
         }
